--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
   <version>1.1-SNAPSHOT</version>
 
   <name>maven-release-policies</name>
-
+  <description> Maven Version Policies</description>
+  <url>https://maven-plugin-ext.github.io/maven-release-policies/</url>
+  <developers>
+    <developer>
+      <name>Atul Agrawal</name>
+    </developer>
+  </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
